--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 
         <article>
             <div class="voltran2">
-                <img src="./img/voltran2.jpg" alt="Voltran2" width="400px" height="300px">
+                <img class="voltran" src="./img/voltran2.jpg" alt="Voltran2" width="400px" height="300px">
             </div>
                 
                 <div  class="voltran3">
-                    <img src="./img/voltran3.jpg" alt="Voltran3" width="400px" height="300px">
+                    <img class="voltran" src="./img/voltran3.jpg" alt="Voltran3" width="400px" height="300px">
                 </div>
         
         </article>
